--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^7.1.8",
     "@shopify/react-native-skia": "^2.2.20",
     "expo": "~54.0.10",
+    "expo-brightness": "~14.0.7",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.12",
     "expo-font": "~14.0.8",
